# hello

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json
app/: demo_waveform.c  demo_waveform.h  tx_application_define.c  tx_application_define.h
app/display/: display_1.c  display_1.h  lv_log_print_cb.c  ui_data_binding.c  ui_data_binding.h
app/eez_studio/: demo.eez-project
app/eez_studio/src/: actions.c  actions.h  screens.c  screens.h  ui.c
app/sample/: sample.c  sample.h
boards/armfly_v6/: eeprom.c  eeprom.h  key.c  key.h  latch_io.c  latch_io.h  lcd.c  lcd.h  led.c  led.h  sdram.c  sdram.h  touch.c  touch.h
boards/armfly_v6/mcu/: adc.c  adc.h  dac.c  dac.h  dma.c  fmc.c  hal_assert.c  hal_timebase.c  i2c.c  i2c.h  ltdc.c  nvic.c  tim.c  tim.h
cmake/: arm-none-eabi.cmake
drivers/Device/ST/STM32F4xx/: README.md  STM32F429XX_FLASH.ld
drivers/STM32F4xx_HAL_Driver/Inc/: stm32_assert.h
drivers/STMPE811/: stmpe811.c  stmpe811.h  stmpe811_reg.c  stmpe811_reg.h
include/: gx_user.h  lv_conf.h  main.h  stm32f4xx_hal_conf.h  stmpe811_conf.h  swtimer.def  tx_user.h  utils.h
init/: main.c  syscalls.c  sysmem.c
lib/SystemView/Config/: SEGGER_SYSVIEW_Conf.h
lib/SystemView/Sample/ThreadX/: SEGGER_SYSVIEW_ThreadX.h
lib/SystemView/Sample/ThreadX/Config/Cortex-M/: SEGGER_SYSVIEW_Config_ThreadX.c
lib/guix/common/: CMakeLists.txt
lib/guix/common/inc/: gx_api.h
lib/guix/ports/cortex_m4/gnu/: CMakeLists.txt
lib/guix/ports/cortex_m4/gnu/inc/: st_ltdc_use_dma2d_flush.h
lib/guix/ports/cortex_m4/gnu/src/: st_ltdc_use_dma2d_flush.c
lib/lvgl/: CMakeLists.txt  lv_version.h
lib/lvgl/src/: lv_conf_internal.h
lib/lvgl/src/osal/: lv_os_private.h  lv_threadx.c  lv_threadx.h
lib/swtimer/: swtimer.c  swtimer.h
lib/threadx/: README.md
lib/threadx/common/inc/: tx_api.h
lib/threadx/common/src/: tx_thread_entry_exit_notify.c  txe_queue_create.c
lib/threadx/ports_arch/ARMv7-M/gnu/: CMakeLists.txt
lib/threadx/ports_arch/ARMv7-M/gnu/src/: tx_initialize_low_level.S
openocd/interface/: stlink.cfg
